Firebase Phone Auth Done.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,20 @@
         android:theme="@style/Theme.AllFirebaseAuth"
         tools:targetApi="31">
         <activity
+            android:name=".PhoneOtpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PhoneLoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginEmailActivity"
             android:exported="false" />
-
         <activity
             android:name=".registerEmailActivity"
             android:exported="false" />
-
         <activity
             android:name=".NextActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +38,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
