Firebase Database & Storage Added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.itcraftsolution.allfirebaseauth">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -15,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AllFirebaseAuth"
         tools:targetApi="31">
+        <activity
+            android:name=".FirebaseDbActivity"
+            android:exported="false" />
         <activity
             android:name=".PhoneOtpActivity"
             android:exported="false" />
