--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
+    implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.google.firebase:firebase-storage:20.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.aabhasr1:OtpView:v1.1.2'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
+    implementation 'com.karumi:dexter:6.2.3'
 }
