--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.itcraftsolution.allfirebaseauth">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -17,22 +17,25 @@
         android:theme="@style/Theme.AllFirebaseAuth"
         tools:targetApi="31">
         <activity
-            android:name=".FirebaseDbActivity"
+            android:name=".Activity.ShowDeatilsActivity"
             android:exported="false" />
         <activity
-            android:name=".PhoneOtpActivity"
+            android:name=".Activity.FirebaseDbActivity"
             android:exported="false" />
         <activity
-            android:name=".PhoneLoginActivity"
+            android:name=".Activity.PhoneOtpActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginEmailActivity"
+            android:name=".Activity.PhoneLoginActivity"
             android:exported="false" />
         <activity
-            android:name=".registerEmailActivity"
+            android:name=".Activity.LoginEmailActivity"
             android:exported="false" />
         <activity
-            android:name=".NextActivity"
+            android:name=".Activity.registerEmailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.NextActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,7 +44,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="false" />
     </application>
 
